--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "text"
   ],
   "author": "Raoul Millais",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "mocha": "~1.8.2"
+  }
 }
